--- a/framework/api/pom.xml
+++ b/framework/api/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>framework</artifactId>
-		<groupId>org.richfaces</groupId>
-		<version>3.3.4.Final</version>
+		<groupId>br.com.omniweb.richfaces</groupId>
+		<version>1.0.0.Final</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.richfaces.framework</groupId>
-	<artifactId>richfaces-api</artifactId>
+	<groupId>br.com.omniweb.richfaces.framework</groupId>
+	<artifactId>richfaces-ie9-api</artifactId>
 	<name>Java Server Faces AJAX framework API</name>
-	<version>3.3.4.Final</version>
+	<version>1.0.0.Final</version>
 	
 	<dependencies>
 		<dependency>
