--- a/framework/impl/pom.xml
+++ b/framework/impl/pom.xml
@@ -2,14 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>framework</artifactId>
-		<groupId>org.richfaces</groupId>
-		<version>3.3.4.Final</version>
+		<groupId>br.com.omniweb.richfaces</groupId>
+		<version>1.0.0.Final</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.richfaces.framework</groupId>
+	<groupId>br.com.omniweb.richfaces</groupId>
 	<artifactId>${classifiedArtifactId}</artifactId>
 	<name>Java Server Faces AJAX framework implementation</name>
-	<version>3.3.4.Final</version>
+	<version>1.0.0.Final</version>
 	<build>
 		<resources>
 			<resource>
@@ -125,7 +125,7 @@
 			<plugin>
 				<groupId>org.richfaces.cdk</groupId>
 				<artifactId>maven-javascript-plugin</artifactId>
-				<version>${project.version}</version>
+				<version>${richfaces.fork.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -228,7 +228,7 @@
 			</dependencies>
 			<properties>
 				<frameworkAdditionalSourceFolder>src/main/java-jsf20</frameworkAdditionalSourceFolder>
-				<classifiedArtifactId>richfaces-impl-jsf2</classifiedArtifactId>
+				<classifiedArtifactId>richfaces-ie9-impl-jsf2</classifiedArtifactId>
 			</properties>
 		</profile>
 		<profile>
@@ -245,7 +245,7 @@
 			</dependencies>
 			<properties>
 				<frameworkAdditionalSourceFolder>src/main/java-jsf12</frameworkAdditionalSourceFolder>
-				<classifiedArtifactId>richfaces-impl</classifiedArtifactId>
+				<classifiedArtifactId>richfaces-ie9-impl</classifiedArtifactId>
 			</properties>
 		</profile>
 	</profiles>
@@ -292,9 +292,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.richfaces.framework</groupId>
-			<artifactId>richfaces-api</artifactId>
-			<version>3.3.4.Final</version>
+			<groupId>br.com.omniweb.richfaces.framework</groupId>
+			<artifactId>richfaces-ie9-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
