--- a/framework/jsf-test/pom.xml
+++ b/framework/jsf-test/pom.xml
@@ -3,14 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>framework</artifactId>
-		<groupId>org.richfaces</groupId>
-		<version>3.3.4.Final</version>
+		<groupId>br.com.omniweb.richfaces</groupId>
+		<version>1.0.0.Final</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.richfaces.framework</groupId>
+	<groupId>br.com.omniweb.richfaces.framework</groupId>
 	<artifactId>jsf-test</artifactId>
 	<name>jsf-test</name>
-	<version>3.3.4.Final</version>
+	<version>1.0.0.Final</version>
 
 	<dependencies>
 		<dependency>
