--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>root</artifactId>
-		<groupId>org.richfaces</groupId>
-		<version>3.3.4.Final</version>
+		<groupId>br.com.omniweb.richfaces</groupId>
+		<version>1.0.0.Final</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.richfaces</groupId>
+	<groupId>br.com.omniweb.richfaces</groupId>
 	<artifactId>framework</artifactId>
-	<version>3.3.4.Final</version>
+	<version>1.0.0.Final</version>
 	<packaging>pom</packaging>
 	<name>Java Server Faces AJAX framework</name>
 	
