--- a/framework/jsf-test/pom.xml
+++ b/framework/jsf-test/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0.Final</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.com.omniweb.richfaces.framework</groupId>
+	<groupId>br.com.omniweb.richfaces</groupId>
 	<artifactId>jsf-test</artifactId>
 	<name>jsf-test</name>
 	<version>1.0.0.Final</version>
