--- a/framework/test/pom.xml
+++ b/framework/test/pom.xml
@@ -6,7 +6,7 @@
 		<version>1.0.0.Final</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.com.omniweb.richfaces.framework</groupId>
+	<groupId>br.com.omniweb.richfaces</groupId>
 	<artifactId>richfaces-ie9-test</artifactId>
 	<version>1.0.0.Final</version>
 	<name>Ajax4Jsf test framework</name>
